# hdx-scraper-gdacs

./: README.md  hatch.toml  last_build_date.txt  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/gdacs/: __main__.py  gdacs.py  pipeline.py
src/hdx/scraper/gdacs/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_gdacs.py  test_pipeline.py
tests/fixtures/: gdacs_rss_information.csv
tests/fixtures/input/: xml-rss.xml
